[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Utility/WindAnimator.gd" type="Script" id=1]

[node name="WindAnimator" type="Node"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="InvertTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="InvertTimer" to="." method="_on_InvertTimer_timeout"]
